--- a/.dev/docker-compose.yml
+++ b/.dev/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - ./:/app
       - ./.dev/nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8071:80"
     environment:
       - VIRTUAL_HOST=testing.loc
     networks:
@@ -14,24 +16,26 @@ services:
       - reverse-proxy
 
   home.testing.fpm:
-    image: ruslandev89/php74-fpm-bitrix
+    build:
+      context: .dev/
+      dockerfile: php74-fpm/Dockerfile
+    image: projects-php74-fpm
     container_name: home.testing.fpm
     working_dir: /app
+#    extra_hosts:
+#      host.docker.internal: host-gateway
     volumes:
       - ./:/app
       - ./.dev/php/php.ini:/etc/php/7.4/fpm/php.ini
       - ./.dev/php/php.ini:/etc/php/7.4/cli/php.ini
+#    environment:
+#      XDEBUG_CONFIG: "remote_host=host.docker.internal remote_enable=1"
+#      PHP_IDE_CONFIG: "serverName=Docker"
     networks:
       - default
-      - mysql
-      - memcached
 
 networks:
   default:
     name: home.testing
-  mysql:
-    external: true
-  memcached:
-    external: true
   reverse-proxy:
     external: true
