--- a/.dev/php/php.ini
+++ b/.dev/php/php.ini
@@ -1945,3 +1945,10 @@ ldap.max_links = -1
 
 ; List of headers files to preload, wildcard patterns allowed.
 ;ffi.preload=
+
+[xdebug]
+xdebug.mode=debug
+xdebug.start_with_request=trigger
+xdebug.discover_client_host = false
+xdebug.client_host = host.docker.internal
+xdebug.client_port = 9000
